--- a/thesis/SA - Fonctionnement.lyx
+++ b/thesis/SA - Fonctionnement.lyx
@@ -208,6 +208,18 @@ textit{Paul Gilster, Digital Literacy}}
 
 \color black
 Introduction 
+\color inherit
+
+\begin_inset Note Note
+status collapsed
+
+\begin_layout Plain Layout
+google this book: Advances in Information Retrieval Croft W
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
