--- a/Paper/IEEEarab-en.lyx
+++ b/Paper/IEEEarab-en.lyx
@@ -28,7 +28,7 @@
 \language_package default
 \inputencoding default
 \fontencoding global
-\font_roman default
+\font_roman Times New Roman
 \font_sans default
 \font_typewriter default
 \font_default_family default
@@ -44,7 +44,7 @@
 \bibtex_command default
 \index_command default
 \float_placement tbh
-\paperfontsize default
+\paperfontsize 9
 \spacing single
 \use_hyperref true
 \pdf_title "Advanced Search in Quran:  Classification & Proposition of All Possible Features"
@@ -94,17 +94,10 @@
 \begin_body
 
 \begin_layout Title
+
+\series bold
+\size large
 Advanced Search in Quran: Classification & Proposition of All Possible Features
-\begin_inset Note Note
-status collapsed
-
-\begin_layout Plain Layout
-google this book: Advances in Information Retrieval Croft W
-\end_layout
-
-\end_inset
-
-
 \end_layout
 
 \begin_layout Author
@@ -112,21 +105,44 @@ Assem
 \begin_inset space ~
 \end_inset
 
-Chelli, Amar
+Chelli
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+1
+\end_layout
+
+\end_inset
+
+, Amar
 \begin_inset space ~
 \end_inset
 
-Balla, and
+Balla
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+2
+\end_layout
+
+\end_inset
+
+, Taha
 \begin_inset space ~
 \end_inset
 
-Taha
-\begin_inset space ~
+Zerrouki
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+3
+\end_layout
+
 \end_inset
 
-Zerrouki,
+,
 \begin_inset Foot
-status open
+status collapsed
 
 \begin_layout Plain Layout
 Assem
@@ -193,8 +209,88 @@ type "mailto:"
 
 \end_layout
 
+\begin_layout Special Paper Notice
+
+\shape up
+\size normal
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+1
+\end_layout
+
+\end_inset
+
+National Higher School of Computer Science Algiers
+\begin_inset Newline newline
+\end_inset
+
+Algeria
+\begin_inset Newline newline
+\end_inset
+
+assem.ch@gmail.com 
+\begin_inset Newline newline
+\end_inset
+
+
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset Newline newline
+\end_inset
+
+
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+2
+\end_layout
+
+\end_inset
+
+National Higher School of Computer Science Algiers
+\begin_inset Newline newline
+\end_inset
+
+Algeria
+\begin_inset Newline newline
+\end_inset
+
+a_balla@esi.dz 
+\begin_inset Newline newline
+\end_inset
+
+
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset Newline newline
+\end_inset
+
+
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+3
+\end_layout
+
+\end_inset
+
+National Higher School of Computer Science Algiers
+\begin_inset Newline newline
+\end_inset
+
+Algeria
+\begin_inset Newline newline
+\end_inset
+
+taha.zerrouki@gmail.com
+\end_layout
+
 \begin_layout Page headings
-workshop pre-conference 2012 LREC
 \begin_inset ERT
 status open
 
@@ -230,6 +326,10 @@ left side}{right side
 \end_layout
 
 \begin_layout Abstract
+
+\series medium
+\shape italic
+\size normal
 The Quran is a sacred book to all Muslims which contains a variety of informatio
 n about all aspects of life: Scientific, Social, Historic and Political
  based knowledge.
@@ -253,11 +353,18 @@ n about all aspects of life: Scientific, Social, Historic and Political
 \end_layout
 
 \begin_layout Keywords
+
+\series medium
+\size normal
 Search Features, Quran, Query, Arabic, Information Retrieval, Search engines.
 \end_layout
 
 \begin_layout Section
-Introduction 
+
+\size normal
+Introduction
+\size default
+ 
 \begin_inset Note Note
 status collapsed
 
@@ -272,41 +379,7 @@ add facetated search (thematic search), clustered search, ontology-based
 \end_layout
 
 \begin_layout Standard
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-IEEEPARstart{
-\end_layout
-
-\end_inset
-
- Q
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-}{
-\end_layout
-
-\end_inset
-
-uran
-\begin_inset ERT
-status collapsed
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-,in Arabic, means the read or the recitation.
+Quran, in Arabic, means the read or the recitation.
  Muslim scholars define it by: the words of Allah revealed to His Prophet
  Muhammad, written in mushaf and transmitted by successive generations (
 \lang arabic_arabi
@@ -354,7 +427,7 @@ Due to the large amount of information held in the Qur'an, it has become
 \end_layout
 
 \begin_layout Standard
-The simple search using exact query doesn’t offer better options and still
+The simple search using exact query does not offer better options and still
  inefficient to move toward Thematic search by example.
  Full text search is the new approach of search that replaced the sequential
  search and which is used in search engines
@@ -1761,8 +1834,7 @@ so We give it to you to drink of
 \noun off
 \color none
 \lang english
- 
-) 
+ ) 
 \family default
 \series default
 \shape default
